--- a/src/index.css
+++ b/src/index.css
@@ -92,13 +92,16 @@
   html {
     overflow-x: hidden;
     -webkit-text-size-adjust: 100%;
+    background-color: #000000;
   }
 
   body {
     @apply bg-background text-foreground;
     max-width: 100vw;
     overflow-x: hidden;
-    padding-top: 72px;
+    padding-top: 0;
+    margin-top: 0;
+    background-color: #000000;
   }
 
   img {
